cluster-state/talos-dev/infra/kubescape-operator/templates/operator/admission-webhook.yaml
---
# Source: kubescape-operator/templates/operator/admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation
  annotations:
    
  labels:
    helm.sh/chart: kubescape-operator-1.30.0
    app.kubernetes.io/name: kubescape-operator
    app.kubernetes.io/instance: kubescape
    app.kubernetes.io/component: operator
    app.kubernetes.io/version: "1.30.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubescape
    app: operator
    tier: ks-control-plane
    kubescape.io/ignore: "true"
webhooks:
  - name: validation.kubescape.admission
    clientConfig:
      service:
        name: kubescape-admission-webhook
        namespace: kubescape
        path: /validate
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIekNDQWdlZ0F3SUJBZ0lRZHFOYXZYRCtnTjJZSmhlN2dmMVhPakFOQmdrcWhraUc5dzBCQVFzRkFEQWEKTVJnd0ZnWURWUVFEREE4cUxtdDFZbVZ6WTJGd1pTNXpkbU13SGhjTk1qWXdNVEF6TVRRek9UVXlXaGNOTWpneApNREl6TVRRek9UVXlXakFhTVJnd0ZnWURWUVFEREE4cUxtdDFZbVZ6WTJGd1pTNXpkbU13Z2dFaU1BMEdDU3FHClNJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUMzQmc5Y0Z3cU5JWEFodFdHR3F5cG14Q1pqaWlveTVib3QKT3VsSmgyVk9vaElic3RXSWhSclRGWnJra3V1SnRkMUtJUThKSlNYRVcyQVVhN1FmVnM4cTRVUWlCaStuM3ZRcApDU0grN2U3TVFL [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE", "CONNECT"]
        apiGroups: ["*"]
        apiVersions: ["v1"]
        resources: ["pods", "pods/exec", "pods/portforward", "pods/attach", "clusterrolebindings", "rolebindings"]
        scope: "*"
    failurePolicy: Ignore
